# simple-chat-with-microservices

./: .gitignore  README.md
services/chat-service/: pdm.toml  pyproject.toml
services/chat-service/chat_service/: __main__.py
services/chat-service/chat_service/core/http/: auth_middleware.py  server.py
services/chat-service/chat_service/core/repository/: db.py  repository.py
services/chat-service/chat_service/core/services/auth/: auth.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
services/chat-service/chat_service/core/services/chat/: chat.py
services/user-service/: Dockerfile  go.mod  go.sum  main.go
services/user-service/internal/grpc/: auth_service.go  auth_service_test.go  grpc.go
services/user-service/internal/http/: handlers.go  handlers_test.go  routes.go  server.go
services/user-service/internal/repository/: db.go  mock_repository.go  models.go  repository.go  utils.go
services/user-service/proto/: auth.pb.go  auth.proto  auth_grpc.pb.go
